# master_thesis

./: .gitignore  README.md  py3.py  pyproject.toml  tensorflow_example.py  testing.ipynb  train.py  xARRUEtN.py
bash/: bashrc_example
condor/: create_environment.sh  cross_val.job  job.job  train_cross_val.sh
src/: datasets.py  inference.py  modeling.py  schedule.py  tensorflow_example.py  train.py  train_cross_val.py  train_envnet.py  train_envnet_cross_val.py  train_envnet_holdout.py  train_holdout.py  train_holdout_val.py  train_piczakbn.py  train_piczakbn_cross_val.py  train_piczakbn_holdout.py
