[tool.poetry]
name = "audio_classification_thesis"
version = "0.1.0"
description = ""
authors = ["Dina Trajkovska"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.4"
torchvision = "^0.5.0"
soundfile = "^0.10.3"
numpy = "^1.18"
librosa = "^0.7.2"
tqdm = "^4.43"
scikit-learn = "^0.22.1"
jupyter = "^1.0"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allow-prereleases = true}
flake8 = "^3.7"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
